// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftviewFooterMenuItem > renders correctly 1`] = `
<v-btn-stub
  active="false"
  block="false"
  border="false"
  class="menu-item-button max-width-reset min-width-reset text-body-medium px-3 flex-grow-1 flex-shrink-0"
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  icon="false"
  loading="false"
  replace="false"
  ripple="true"
  size="default"
  slim="false"
  stacked="false"
  symbol="Symbol(vuetify:v-btn-toggle)"
  tag="button"
  tile="false"
  variant="elevated"
>
  <v-badge-stub
    bordered="false"
    class=""
    dot="true"
    floating="true"
    inline="false"
    label="$vuetify.badge"
    location="right top"
    modelvalue="false"
    offsetx="3"
    offsety="7"
    tag="div"
    tile="false"
    transition="scale-rotate-transition"
  >
    <div
      class="d-flex align-center"
    >
      <v-icon-stub
        class="menu-icon"
        color="white"
        disabled="false"
        end="false"
        size="default"
        start="false"
        tag="i"
      >
        
      </v-icon-stub>
      <!--v-if-->
      <!--v-if-->
    </div>
  </v-badge-stub>
</v-btn-stub>
`;

exports[`ShiftviewFooterMenuItem > renders correctly as compact 1`] = `
<v-btn-stub
  active="false"
  block="false"
  border="false"
  class="menu-item-button max-width-reset min-width-reset text-body-medium px-3 flex-shrink-1 flex-grow-0"
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  icon="false"
  loading="false"
  replace="false"
  ripple="true"
  size="default"
  slim="false"
  stacked="false"
  symbol="Symbol(vuetify:v-btn-toggle)"
  tag="button"
  tile="false"
  variant="elevated"
>
  <v-badge-stub
    bordered="false"
    class=""
    color="primary"
    dot="true"
    floating="true"
    inline="false"
    label="$vuetify.badge"
    location="right top"
    modelvalue="true"
    offsetx="3"
    offsety="7"
    tag="div"
    tile="false"
    transition="scale-rotate-transition"
  >
    <div
      class="d-flex align-center"
    >
      <v-icon-stub
        class="menu-icon"
        color="white"
        disabled="false"
        end="false"
        size="default"
        start="false"
        tag="i"
      >
        M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z
      </v-icon-stub>
      <!--v-if-->
      <!--v-if-->
    </div>
  </v-badge-stub>
</v-btn-stub>
`;

exports[`ShiftviewFooterMenuItem > renders correctly with counter 1`] = `
<v-btn-stub
  active="false"
  block="false"
  border="false"
  class="menu-item-button max-width-reset min-width-reset text-body-medium px-3 flex-grow-1 flex-shrink-0"
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  icon="false"
  loading="false"
  replace="false"
  ripple="true"
  size="default"
  slim="false"
  stacked="false"
  symbol="Symbol(vuetify:v-btn-toggle)"
  tag="button"
  tile="false"
  variant="elevated"
>
  <v-badge-stub
    bordered="false"
    class="ml-n3 mr-4"
    color="primary"
    dot="false"
    floating="true"
    inline="false"
    label="$vuetify.badge"
    location="right top"
    modelvalue="true"
    offsetx="-15"
    offsety="18"
    tag="div"
    tile="false"
    transition="scale-rotate-transition"
  >
    <div
      class="d-flex align-center"
    >
      <v-icon-stub
        class="menu-icon"
        color="white"
        disabled="false"
        end="false"
        size="default"
        start="false"
        tag="i"
      >
        M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z
      </v-icon-stub>
      <!--v-if-->
      <span
        class="ml-3 text-white"
      >
        test item
      </span>
    </div>
  </v-badge-stub>
</v-btn-stub>
`;

exports[`ShiftviewFooterMenuItem > renders correctly with icon dot 1`] = `
<v-btn-stub
  active="false"
  block="false"
  border="false"
  class="menu-item-button max-width-reset min-width-reset text-body-medium px-3 flex-grow-1 flex-shrink-0"
  density="default"
  disabled="false"
  exact="false"
  flat="false"
  icon="false"
  loading="false"
  replace="false"
  ripple="true"
  size="default"
  slim="false"
  stacked="false"
  symbol="Symbol(vuetify:v-btn-toggle)"
  tag="button"
  tile="false"
  variant="elevated"
>
  <v-badge-stub
    bordered="false"
    class=""
    color="primary"
    dot="false"
    floating="true"
    inline="false"
    label="$vuetify.badge"
    location="right top"
    modelvalue="false"
    offsetx="-15"
    offsety="18"
    tag="div"
    tile="false"
    transition="scale-rotate-transition"
  >
    <div
      class="d-flex align-center"
    >
      <v-icon-stub
        class="menu-icon"
        color="white"
        disabled="false"
        end="false"
        size="default"
        start="false"
        tag="i"
      >
        M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z
      </v-icon-stub>
      <v-icon-stub
        class="ml-n2 mt-n4"
        color="primary"
        disabled="false"
        end="false"
        size="9"
        start="false"
        tag="i"
      >
        M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2Z
      </v-icon-stub>
      <span
        class="ml-3 text-white"
      >
        test item
      </span>
    </div>
  </v-badge-stub>
</v-btn-stub>
`;
